correction menu position relative overflow-x

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,16 @@ html:root{
     --white: white;
 }
 
+html{
+    overflow-x: hidden;
+}
+
 body{
     margin: 0;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color:white;
     overflow-x: hidden;
+    position:relative;
 }
 
 /*-- container system----------*****************************************/
@@ -24,12 +29,14 @@ body{
 .container-fluid, .row{
     width: 100%;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .container{ 
     width: 80%;
     max-width: 960px;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 .col{
@@ -680,6 +687,13 @@ input::-moz-placeholder {
     transform: none;
     }
 
+    /* #menuToggle ul:not(checked){
+        display: none;
+    }
+    #menuToggle ul:checked{
+        display: block;
+    } */
+
     /* media query container carousel */
     .mq-container-carousel{
         text-align: center;
@@ -780,7 +794,7 @@ input::-moz-placeholder {
     display: block;
     position: absolute;
     top: 30px;
-    right: 70px;
+    right: 20px;
     z-index: 1;
     -webkit-user-select: none;
     user-select: none;
@@ -850,7 +864,6 @@ input::-moz-placeholder {
     transform-origin: 0% 0%;
     transform: translate(100%, 0);
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-    overflow-x: hidden;
 }
 
     #menu li{
